[tool.poetry]
name = "homework-09"
version = "0.1.0"
description = ""
authors = ["VlodyaKr <vlodya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.31"
aioshutil = "^1.1"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
